# PyEE

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: 1.0_units_basics.py  1.1_passives.py  buck_design.py  passives.py  units_basics.py
demo/units/: units_basics.py
docs/: make.bat
docs/source/: conf.py  index.rst  math.rst  pyee.math.polynomials.rst  pyee.math.rst  pyee.passives.rst  pyee.rst  pyee.units.converters.rst  pyee.units.rst  pyee.units.types.rst  pyee.utilities.rst  units.rst  usage.rst
pyee/: __init__.py  config.py  exceptions.py  passives.py  regex.py  utilities.py
pyee/data/: SI_prefixes.json  SI_units_base.json  SI_units_electrical.json
pyee/math/: __init__.py  basic.py  polynomials.py
pyee/smps/: buck.py  smps.py
pyee/types/: __init__.py  aliases.py  converters.py  impedance.py  physicalquantity.py  pq.py  prefixes.py  units.py
pyee/units/: Units.py  __init__.py  converters.py  types.py  units.py
test/: context.py  test_Units_DependantPQ.py  test_Units_Passives.py  test_Units_PhysicalQuantity.py  test_Units_Prefixes.py  test_Units_Units.py  test_math_polynomials.py  test_smps_format_fs.py  test_types_converters.py  test_types_passives.py  test_types_pq_DPQ.py  test_types_pq_PQ.py  test_types_prefixes_Prefix.py  test_types_units_Units.py  test_types_units_Units_convert_to.py  test_units_Units.py  ut_Units_PhysicalQuantity.py  ut_Units_Prefixes.py  ut_Units_Units.py
