[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pyee"
description = "Python library for electrical engineering"
license-files = ["LICENSE"]
keywords = ["electrical", "EE", "math", "symbolic", "engineering", "power"]
dynamic = ["version", "readme"]
requires-python = ">= 3.13"
dependencies = [
  "sphinx==8.2.3"
]

[tool.setuptools.dynamic]
version = {attr = "pyee.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.md"]}