[build-system]
requires = [
    "setuptools >= 61.0",
    "numpy >= 2.2.4",
    "sphinx >= 8.2.3"
]
build-backend = "setuptools.build_meta"
[project]
name = "pyee"
description = "Python library for electrical engineering"
license-files = ["LICENSE"]
keywords = ["electrical", "EE", "math", "symbolic", "engineering", "power"]
dynamic = ["version", "readme"]
requires-python = ">= 3.11"
dependencies = ["sphinx==8.2.3"]

[tool.setuptools]
packages = ["pyee"]

[tool.setuptools.package-data]
pyee=["data/*"]

[tool.setuptools.dynamic]
version = {attr = "pyee.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.md"]}